# bid_master_V2

./: .42plugin.yml  .claudeignore  .dockerignore  .env.example  .eslintrc.json  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  backend.railway.json  drizzle.config.ts  drizzle.studio.config.ts  install.ps1  install.sh  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  pytest.ini  railway.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.42cog/: README.md
app/: globals.css  layout.tsx  manifest.ts
src/backend/: .dockerignore  Dockerfile  nixpacks.toml  pyproject.toml  pytest.ini  requirements.txt
src/backend/app/: __init__.py  cli.py  config.py  dependencies.py  limiter.py  main.py
src/backend/app/api/: __init__.py  api_keys.py  auth.py  cli_auth.py  database.py  extract.py  files.py  health.py  logs.py  settings.py  simulate.py  statistics.py
src/backend/app/infrastructure/: database.py  db_schema.py  email_service.py  log_collector.py  mock_storage.py  pg_storage.py  storage.py
src/backend/app/infrastructure/llm/: __init__.py  lite_llm.py
src/backend/app/models/: __init__.py  schemas.py
src/backend/app/services/: encryption_service.py  extract_service.py  file_service.py  llm_service.py  ocr_service.py  ocrmypdf_service.py  paddleocr_service.py  prompt_builder.py  simulate_service.py  statistics_service.py
src/backend/app/utils/: auth_dep.py  crypto.py  exceptions.py
src/backend/prompts/: bid-knowledge.md  comparison-framework.md  extract_main.md  extract_templates.md  opening_main.md  opening_templates.md  qualification-mapping.md  simulate_main.md  simulation-templates.md
src/backend/tests/: conftest.py
src/backend/tests/unit/models/: test_schemas.py
src/backend/tests/unit/services/: test_encryption_service.py  test_llm_service.py  test_ocr_service.py  test_paddleocr_service.py  test_statistics_service.py
src/backend/tests/unit/utils/: test_crypto.py
(+192 files in other folders)
