[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bid-master-backend"
version = "1.0.0"
description = "Bid Master Web FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "litellm>=1.0.0",
    "cryptography>=43.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
    "markitdown>=0.0.1",
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]