[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "bid-master-cli"
version = "1.0.3"
description = "Bid Master CLI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "litellm>=1.0.0",
    "cryptography>=43.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
    "markitdown>=0.0.1",
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "python-docx>=1.0.0",
    "xlrd>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "sse-starlette>=2.1.0",
    "slowapi>=0.1.9",
]

[project.scripts]
bidmaster = "app.cli:main"


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]